<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tweebook</string>

    <string name="description_logo">Tweebook</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_back_to_fb">Facebook</string>
     <string name="description_back_to_twitter">Twitter</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_change_background">Change Background</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="description_now">Go to Now</string>
<string name="description_logout">Logout</string>

    <string name="title_now_playing">Now playing</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_session_detail">Session information</string>
    <string name="title_starred">Twitter App</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_vendors">Sandbox</string>
    <string name="title_vendor_detail">Company information</string>
    <string name="title_map">Map</string>
    <string name="title_tagstream">Realtime stream</string>
    <string name="title_bulletin">Bulletin</string>

    <string name="title_session_tracks">Session tracks</string>
    <string name="title_vendor_tracks">Sandbox pods</string>

    <string name="title_share">Share using</string>

    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \"<xliff:g id="query">%1$s</xliff:g>\"</string>

    <string name="btn_schedule">Schedule</string>
    <string name="btn_map">Map</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_vendors">Sandbox</string>
    <string name="btn_announcements">Bulletin</string>

    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>

    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
    <string name="session_moderator_status"><xliff:g id="questions">%1$s</xliff:g> questions submitted and <xliff:g id="votes">%2$s</xliff:g> votes cast.</string>

    <string name="all_sandbox_title">All companies</string>
    <string name="all_sandbox_subtitle">Touch to filter by sandbox companies by pod.</string>

    <string name="all_sessions_title">All sessions</string>
    <string name="all_sessions_subtitle">Touch to filter sessions by track.</string>

    <string name="empty_sessions">No sessions found.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_vendors">No sandbox results found.</string>
    <string name="empty_search">No search results found.</string>
    <string name="empty_links">No links available.</string>

    <string name="session_summary">Summary</string>
    <string name="session_notes">Notes</string>
    <string name="session_links">Links</string>
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>

    <string name="tag_stream">Realtime stream for</string>
    
    <string name="session_link_main">Web link</string>
    <string name="session_link_moderator">Ask questions</string>
    <string name="session_link_youtube">YouTube video</string>
    <string name="session_link_pdf">Slides (PDF)</string>
    <string name="session_link_feedback">Feedback on this session</string>
    <string name="session_link_notes">Official notes</string>

    <string name="search_sessions">Sessions</string>
    <string name="search_vendors">Sandbox</string>

    <string name="starred_sessions">Twitter</string>
    <string name="starred_vendors">Facebook</string>
    
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete">Caches have been cleared</string>
<string name="imageview_description">Image Thumbnail</string>

</resources>
