<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    

    
<item android:id="@+id/menu_back"
        android:icon="@drawable/backto_fb"
        android:title="@string/description_back_to_fb"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_title_refresh"
        android:title="@string/description_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_change_background"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/description_change_background"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    
     <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/description_logout"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
</menu>