<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_back_to_t"
        android:icon="@drawable/backto_twitter"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/description_back_to_twitter"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_title_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/description_refresh"/>

    <item
        android:id="@+id/menu_change_background"
        android:icon="@drawable/ic_menu_camera"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/description_change_background"/>

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/description_logout"/>

</menu>